Fix: Adjust coordination button visibility

--- a/src/pages/Adm/adm.module.css
+++ b/src/pages/Adm/adm.module.css
@@ -23,7 +23,7 @@
   background-color: rgba(255, 255, 255, 0.1);
   width: 700px;
   min-height: 0px;
-  max-height: 550px;
+  max-height: 600px;
   padding: 10px 10px 5px 10px;
   border-radius: 20px;
   gap: 5px;
